--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "babel-runtime": "^6.9.2",
     "bizcharts": "^3.1.5",
     "bizcharts-plugin-slider": "^2.0.1",
+    "calendar": "^0.1.0",
     "classnames": "^2.2.5",
     "dva": "^2.2.3",
     "dva-loading": "^1.0.4",
     "enquire-js": "^0.2.1",
+    "fullcalendar": "^3.9.0",
     "less": "2.7.2",
     "lodash": "^4.17.4",
     "lodash-decorators": "^4.4.1",
